Wrap page titles in template block

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}
+<title>Sensive Blog - Contact</title>
+{% endblock %}
+
 {% block content %}
 
     <!--================ Hero sm banner start =================-->
