--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -86,7 +86,7 @@
       </div>
 
 
-      <!-- Start Blog Post Siddebar -->
+      <!-- Start Blog Post Sidebar -->
       <div class="col-lg-4 sidebar-widgets">
         <div class="widget-wrap">
           <div class="single-sidebar-widget newsletter-widget">
@@ -97,7 +97,7 @@
                   onblur="this.placeholder = 'Enter email'">
               </div>
             </div>
-            <button class="bbtns d-block mt-20 w-100">Subcribe</button>
+            <button class="bbtns d-block mt-20 w-100">Subscribe</button>
           </div>
 
 
@@ -106,7 +106,7 @@
           </div>
         </div>
       </div>
-      <!-- End Blog Post Siddebar -->
+      <!-- End Blog Post Sidebar -->
     </div>
   </div>
 </section>
