--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
             </div>
           </div>
 
-          <!-- Start Blog Post Siddebar -->
+          <!-- Start Blog Post Sidebar -->
           <div class="col-lg-4 sidebar-widgets">
             <div class="widget-wrap">
               <div class="single-sidebar-widget newsletter-widget">
@@ -119,7 +119,7 @@
               </div>
             </div>
           </div>
-          <!-- End Blog Post Siddebar -->
+          <!-- End Blog Post Sidebar -->
         </div>
       </div>
     </section>
