--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,7 +39,7 @@
           <span class="contact-info__icon"><i class="ti-home"></i></span>
           <div class="media-body">
             <h3>California United States</h3>
-            <p>Santa monica bullevard</p>
+            <p>Santa monica boulevard</p>
           </div>
         </div>
         <div class="media contact-info">
